Fix overflow to prevent horizontal scrollers.

--- a/web/css/tidbits.css
+++ b/web/css/tidbits.css
@@ -141,7 +141,7 @@ div.tidbit dl dt {
 
 div.tidbit.card .content {
 	max-height: 160px;
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 div.tidbit.card.fac .content {
@@ -153,7 +153,7 @@ div.tidbit.card.fac .content {
 
 div.tidbit.card dd {
 	max-height: 60px;
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 div.tidbit.card.fac dd {
@@ -328,7 +328,7 @@ div.tidbit.card dl dd + dd::before {
 #bit-edit-listing div {
 	margin-bottom: 0.5em;
 	max-height: 18px;
-	overflow-y: hidden;
+	overflow: hidden;
 	cursor: pointer;
 }
 
